--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       POSTGRES_USER: passmais
       POSTGRES_PASSWORD: passmais
     ports:
-      - "5433:5432"
+      - "5432:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
     healthcheck:
@@ -17,14 +17,19 @@ services:
       retries: 5
     restart: unless-stopped
 
-  pgadmin:
-    image: dpage/pgadmin4:8
-    container_name: passmais-pgadmin
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: passmais-api
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@local
-      PGADMIN_DEFAULT_PASSWORD: admin
+      # Datasource aponta para o serviço 'db' do compose
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/passmais
+      DB_USERNAME: ${DB_USERNAME:-passmais}
+      DB_PASSWORD: ${DB_PASSWORD:-passmais}
+      JWT_SECRET: ${JWT_SECRET:-change-me}
     ports:
-      - "5050:80"
+      - "8080:8080"
     depends_on:
       db:
         condition: service_healthy
