--- a/.github/workflows/deploy-ECR-.yml
+++ b/.github/workflows/deploy-ECR-.yml
@@ -25,7 +25,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Verificar diretório de trabalho
-        run: pwd
+        run: |
+          echo "Diretório atual:"
+          pwd
+
 
 
       - name: Configure AWS credentials
