Configure Hibernate to serialize JSON using JacksonJsonFormatMapper.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,8 @@ spring:
     properties:
       hibernate:
         jdbc.time_zone: UTC
+        type:
+          json_format_mapper: org.hibernate.type.format.jackson.JacksonJsonFormatMapper
     open-in-view: false
   jackson:
     serialization:
