--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres:16
+    image: postgres:16-alpine
     container_name: passmais-db
     environment:
       POSTGRES_DB: passmais
@@ -10,11 +10,6 @@ services:
       - "5432:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U passmais"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
     restart: always
 
   api:
@@ -35,8 +30,7 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      db:
-        condition: service_healthy
+      - db
 
 volumes:
   db-data:
