Document optional AWS credentials in env example

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,9 @@ SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5433/passmais
 
 # JWT
 JWT_SECRET=troque-este-segredo-por-um-com-32-ou-mais-caracteres
+
+# AWS (opcional - substitua pelas credenciais reais em produção)
+AWS_ACCESS_KEY_ID=local-dev-access-key
+AWS_SECRET_ACCESS_KEY=local-dev-secret-key
+AWS_REGION=us-east-1
+AWS_S3_BUCKET=passmais-local-bucket
